tests/invalid/Lifetime_Lambda_Invalid_3.whiley
// wrong method type

public export method test():
    method<a, b>()->(&int) m = &<a>(-> new 1)
